<resources>
    <string name="title_activity_bluetooth_scan">Bluetooth Scan</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_export_database">Export database</string>
    <string name="menu_export_csv_sidiary">Export CSV (SiDiary format)</string>
    <string name="menu_import_db">Restore database</string>
    <string name="error_bluetooth_not_supported">Error: Bluetooth not supported by this device</string>
    <string name="unknown_device">Unrecognized Device</string>
    <string name="connecting_to_device">Connecting to device</string>
    <string name="title_activity_raw_data_table">Raw Data Table</string>
    <string name="title_activity_calculated_data_table">Calculated Data Table</string>
    <string name="title_activity_start_new_sensor">Start New Sensor</string>
    <string name="title_activity_new_sensor_location">New Sensor Location</string>
    <string name="title_activity_stop_sensor">Stop Sensor</string>
    <string name="title_activity_nav_drawer">Nav Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_calibration_check_in">Calibration Activity</string>
    <string name="title_activity_usb_connected">USB Connected Activity</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_hint">Snooze alert for x minutes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="pref_sensor_location_dont_ask_again">Don\'t ask me that again</string>
    <string name="title_activity_error">"Error and Event List"</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_fake_numbers">Fake Numbers</string>
    <string name="title_activity_edit_alert">Edit Alert</string>
    <string name="title_activity_double_calibration">Initial Calibration</string>
    <string name="title_activity_calibration_override">Calibration Override</string>
    <string name="pref_header_cloud_storage">Cloud Storage</string>
    <string name="auto_configure_title">Auto configure</string>
    <string name="prefs_auto_config_summary">Auto configure using a barcode.</string>
    <string name="auto_config_cam_title">Camera</string>
    <string name="auto_config_cam_summary">Scan a QR code with your mobile (recommended)</string>
    <string name="auto_config_image_title">Image file</string>
    <string name="auto_config_image_summary">You can save a QR code as an image file (such as .png or .jpeg) on your mobile. Then, use this option to scan the QR code from the saved file.</string>
    <string name="scan_share2_barcode">Scan Share Barcode</string>
    <string name="pref_share2_scan_barcode_summary">Or scan the barcode on the share receiver</string>
    <string name="pref_title_mongodb">MongoDB</string>
    <string name="pref_summary_mongodb_enabled">Direct database upload, not recommended for Nightscout</string>
    <string name="pref_title_mongodb_uri">URI</string>
    <string name="pref_dialog_mongodb_uri">Enter MongoDB URI"</string>
    <string name="pref_message_mongodb_uri">Replace example values in {}\'s with your correct values</string>
    <string name="pref_default_mongodb_uri">mongodb://{user}:{password}@{host}.mongolab.com:{11111}/{database}</string>
    <string name="pref_title_mongodb_collection">Collection name</string>
    <string name="pref_dialog_mongodb_collection">Enter collection name</string>
    <string name="pref_message_mongodb_collection">This is the name of the collection where the CGM data will be stored</string>
    <string name="pref_title_mongodb_device_status_collection">Device Status collection name</string>
    <string name="pref_dialog_mongodb_device_status_collection">Enter Device Status collection name"</string>
    <string name="pref_message_mongodb_device_status_collection">This is the name of the collection where the battery and other device data will be stored</string>
    <string name="pref_title_api">Nightscout Sync (REST-API)</string>
    <string name="pref_title_api_enabled">Enabled</string>
    <string name="pref_summary_api_enabled">The REST API is the standard way to connect to Nightscout</string>
    <string name="pref_title_api_url">Base URL</string>
    <string name="pref_summary_api_url">Format: https://password@hostname/api/v1/</string>
    <string name="pref_dialog_api_url">Enter Base API URL</string>
    <string name="pref_message_api_url">This only the base URL, the uploader will automatically append /entries for the POST.  API_SECRET on the server should match yourpassphrase in this setting.</string>
    <string name="pref_default_api_url">https://yourpassphrase@{YOUR-SITE}.azurewebsites.net/api/v1/</string>
    <string name="wifi_recievers_dialog_message">Comma separated list of IP:port (for example 37.142.132.220:50005,37.142.132.220:50010,mongodb://user:pass@ds053958.mongolab.com:53958/db/collection)</string>
    <string name="wifi_recievers_dialog_title">Enter IP addresses and ports of receivers (including mongodb addresses if needed)</string>
    <string name="location_not_found_title">Location Is Not Enabled</string>
    <string name="location_not_found_message">For Bluetooth discovery to work on newer devices, location must be enabled. xDrip does not track your location except with the optional Emergency Message feature</string>
    <string name="location_yes">Enable</string>
    <string name="pref_title_broadcast_enabled">Broadcast locally</string>
    <string name="pref_summary_broadcast_enabled">Enable local broadcast of data so other apps (e.g. NightWatch) can listen on new values</string>
    <string name="title_activity_share_test">Share Test</string>
    <string name="pref_pebble_trend_watchface">Use Pebble Trend Watchface</string>
    <string name="pref_summary_pebble_trend_watchface">Use/install Pebble Trend Watchface (experimental)</string>
    <string name="pref_pebble_display_trend">Display Trend</string>
    <string name="pref_summary_display_trend">Show the BG trend on the xDrip Pebble watch face.</string>
    <string name="pref_pebble_display_high_line">Display High Line</string>
    <string name="pref_pebble_display_low_line">Display Low Line</string>
    <string name="amazfit_sync_service">AmazFit Sync Service</string>
    <string name="pref_amazfit_enable_summary">Enable Amazfit Data support</string>
    <string name="pref_amazfit_enable">Enable</string>
    <string name="pref_amazfit_tile">Amazfit Service</string>
    <string name="pref_amazfit_BG_alert_enable_summary">Sends active BG Alerts to smartwatch</string>
    <string name="pref_amazfit_BG_alert_enable">Enable</string>
    <string name="pref_amazfit_BG_alert_title">BG Alerts</string>
    <string name="pref_amazfit_other_alert_enable_summary">Sends other alerts to smartwatch</string>
    <string name="pref_amazfit_other_alert_enable">Enable</string>
    <string name="pref_amazfit_other_alert_title">Other Alerts</string>
    <string name="pref_amazfit_watchface_graph_dots_title">Watchface Graph Dots</string>
    <string name="pref_amazfit_watchface_graph_dots_summary">Shows tiny dots instead of small</string>
    <string name="pref_amazfit_watchface_graph_enable">Enable</string>
    <string name="pref_amazfit_watchface_graph_title">Watchface Graph</string>
    <string name="pref_amazfit_watchface_graph_enable_summary">Shows graph in watchfaces background</string>
    <string name="pref_amazfit_watchface_graph_hours_title">Watchface Graph</string>
    <string name="pref_amazfit_watchface_graph_hours_summary">set how many hours in graph</string>
    <string name="pref_amazfit_widget_graph_hours_title">Widget Graph</string>
    <string name="pref_amazfit_widget_graph_hours_summary">set how many hours in graph</string>
    <string name="pref_amazfit_widget_graph_dots_title">Widget Graph Dots</string>
    <string name="pref_amazfit_widget_graph_dots_summary">Shows tiny dots instead of small</string>
    <string name="pref_amazfit_widget_graph_enable">Enable</string>
    <string name="pref_amazfit_widget_graph_title">Widget Graph</string>
    <string name="export_submenu">Import / Export features</string>
    <string name="action_resend_to_watch">Resend glucose to watch</string>
    <string name="action_open_watch_setting">Open Settings on Wear</string>
    <string name="action_sync_watch_db">Reset Wear DB</string>
    <string name="show_parakeet_map">Show Parakeet map</string>
    <string name="switch_parakeet_to_setup_mode">Switch Parakeet to Setup mode</string>
    <string name="view_events_log">View Events Log</string>
    <string name="show_libre_trend">Show Libre trend</string>
    <string name="share_config_via_qr_code">Share config via QR code</string>
    <string name="check_for_updated_version">Check for updated version</string>
    <string name="send_feedback_to_developer">Send Feedback to developers</string>
    <string name="glucose_units">Glucose Units</string>
    <string name="mmol_or_mgdl_high_and_low">mmol/l or mg/dl high and low</string>
    <string name="general_settings">General Settings</string>
    <string name="high_value">High Value</string>
    <string name="low_value">Low Value</string>
    <string name="speak_readings">Speak Readings</string>
    <string name="search">Search</string>
    <string name="reset_all_language_data">Reset ALL language data</string>
    <string name="show_only_customized_entries">Show only customized entries</string>
    <string name="crowd_sourced_translation">Crowd-sourced translation</string>
    <string name="maximum_value">The maximum value you consider to be in range.</string>
    <string name="minimum_value">The minimum value you consider to be in range.</string>
    <string name="reminders">Reminders</string>
    <string name="show_only_untranslated">Show only untranslated</string>
    <string name="days">days</string>
    <string name="emergency_messages">Emergency Messages</string>
    <string name="hours">Hours</string>
    <string name="weeks">Weeks</string>
    <string name="repeat">Repeat</string>
    <string name="chime_only">Chime only</string>
    <string name="alternating">Alternating</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <string name="mega_priority">Mega-priority</string>
    <string name="quiet_at_night">Quiet at Night</string>
    <string name="alerts_disabled">Alerts disabled</string>
    <string name="restart_in_the_morning">Restart in the Morning</string>
    <string name="advanced_mode">Advanced Mode</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="show_help">Show Help</string>
    <string name="load_save_settings_on_sdcard">Load / Save Settings</string>
    <string name="delete_all_bg_readings">Delete All BG readings</string>
    <string name="debugging_test_feature">Debugging test feature</string>
    <string name="sync_treatments">Sync Treatments</string>
    <string name="send_bg_readings_to_backfill">Send BG readings to backfill</string>
    <string name="view_old_error_log">View old Error Log</string>
    <string name="return_to_home_screen">Return to Home Screen</string>
    <string name="title_full_screen_mode">Full Screen mode</string>
    <string name="title_colors_for_printing">Colors for printing</string>
    <string name="title_share_save_this_screen">Share / Save this screen</string>
    <string name="followers_name">Followers Name:</string>
    <string name="your_display_name">Your display name:</string>
    <string name="followers_email">Followers Email:</string>
    <string name="send_invite">Send Invite</string>
</resources>