<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/showhelp"
        android:checkable="false"
        android:onClick="showHelpFromMenu"
        android:orderInCategory="1"
        android:title="@string/show_help"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/showreminders"
        android:checkable="false"
        android:onClick="showRemindersFromMenu"
        android:orderInCategory="1"
        android:title="@string/reminders"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/showassist"
        android:checkable="false"
        android:onClick="showAssistFromMenu"
        android:orderInCategory="1"
        android:title="@string/emergency_messages"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/export_submenu"
        android:orderInCategory="1"
        android:title="@string/export_submenu">

        <menu>
            <item
                android:id="@+id/action_export_database"
                android:checkable="false"
                android:orderInCategory="1"
                android:title="@string/menu_export_database"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_import_db"
                android:checkable="false"
                android:orderInCategory="1"
                android:title="@string/menu_import_db"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_export_csv_sidiary"
                android:checkable="false"
                android:orderInCategory="1"
                android:title="@string/menu_export_csv_sidiary"
                app:showAsAction="never" />

            <item
                android:id="@+id/importsettings"
                android:checkable="false"
                android:onClick="settingsSDcardExport"
                android:orderInCategory="1"
                android:title="@string/load_save_settings_on_sdcard"
                android:visible="true"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/showmap"
        android:checkable="false"
        android:onClick="showMapFromMenu"
        android:orderInCategory="1"
        android:title="@string/show_parakeet_map"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/parakeetsetup"
        android:checkable="false"
        android:onClick="parakeetSetupMode"
        android:orderInCategory="1"
        android:title="@string/switch_parakeet_to_setup_mode"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_resend_last_bg"
        android:orderInCategory="100"
        android:title="@string/action_resend_to_watch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_watch_settings"
        android:orderInCategory="100"
        android:title="@string/action_open_watch_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sync_watch_db"
        android:orderInCategory="100"
        android:title="@string/action_sync_watch_db"
        app:showAsAction="never" />


    <item
        android:id="@+id/deleteAllBG"
        android:checkable="false"
        android:onClick="deleteAllBG"
        android:orderInCategory="1"
        android:title="@string/delete_all_bg_readings"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/testFeature"
        android:checkable="false"
        android:onClick="testFeature"
        android:orderInCategory="1"
        android:title="@string/debugging_test_feature"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/crowdtranslate"
        android:checkable="false"
        android:onClick="crowdTranslate"
        android:orderInCategory="1"
        android:title="@string/crowd_sourced_translation"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/userEvents"
        android:checkable="false"
        android:onClick="viewEventLog"
        android:orderInCategory="1"
        android:title="@string/view_events_log"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/libreLastMinutes"
        android:checkable="false"
        android:onClick="ShowLibreTrend"
        android:orderInCategory="1"
        android:title="@string/show_libre_trend"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/synctreatments"
        android:checkable="false"
        android:orderInCategory="1"
        android:title="@string/sync_treatments"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/sharemyconfig"
        android:checkable="false"
        android:icon="@drawable/ic_qrcode_grey600_48dp"
        android:onClick="shareMyConfig"
        android:orderInCategory="1"
        android:title="@string/share_config_via_qr_code"
        app:showAsAction="never" />

    <item
        android:id="@+id/sendbackfill"
        android:checkable="false"
        android:onClick="doBackFillBroadcast"
        android:orderInCategory="1"
        android:title="@string/send_bg_readings_to_backfill"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/checkforupdate"
        android:checkable="false"
        android:onClick="checkForUpdate"
        android:orderInCategory="1"
        android:title="@string/check_for_updated_version"
        app:showAsAction="never" />

    <item
        android:id="@+id/sendfeedback"
        android:checkable="false"
        android:onClick="sendFeedback"
        android:orderInCategory="1"
        android:title="@string/send_feedback_to_developer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_speakreadings"
        android:checkable="true"
        android:orderInCategory="2"
        android:title="@string/speak_readings"
        android:visible="false"
        app:showAsAction="never" />
</menu>