<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:icon="@drawable/ic_ruler_grey600_48dp"
        android:key="xdrip_units_settings"
        android:summary="@string/mmol_or_mgdl_high_and_low"
        android:title="@string/glucose_units">
        <PreferenceCategory
            android:key="bgRange"
            android:title="@string/general_settings">
            <ListPreference
                android:defaultValue="mgdl"
                android:entries="@array/bgUnitEntries"
                android:entryValues="@array/bgUnitValues"
                android:key="units"
                android:title="@string/glucose_units" />
            <EditTextPreference
                android:defaultValue="170"
                android:inputType="numberDecimal"
                android:key="highValue"
                android:numeric="decimal"
                android:summary="@string/maximum_value"
                android:title="@string/high_value" />
            <EditTextPreference
                android:defaultValue="70"
                android:inputType="numberDecimal"
                android:key="lowValue"
                android:numeric="decimal"
                android:summary="@string/minimum_value"
                android:title="@string/low_value" />
        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>
