<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_language_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/showonlyuntranslated"
        android:checkable="true"
        android:onClick="languageShowOnlyUntranslated"
        android:orderInCategory="1"
        android:title="@string/show_only_untranslated"
        app:showAsAction="never" />
    <item
        android:id="@+id/showonlycustomized"
        android:checkable="true"
        android:onClick="languageShowOnlyCustomized"
        android:orderInCategory="2"
        android:title="@string/show_only_customized_entries"
        app:showAsAction="never" />
    <item
        android:id="@+id/reseteverything"
        android:checkable="false"
        android:onClick="languageResetEverything"
        android:orderInCategory="3"
        android:title="@string/reset_all_language_data"
        app:showAsAction="never" />
</menu>