<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_toggle_fullscreen"
        android:checkable="true"
        android:onClick="toggleStatisticsFullScreenMode"
        android:orderInCategory="1"
        android:title="@string/title_full_screen_mode"
        android:visible="true" />
    <item
        android:id="@+id/action_toggle_printing"
        android:checkable="true"
        android:onClick="toggleStatisticsPrintingMode"
        android:orderInCategory="1"
        android:title="@string/title_colors_for_printing"
        android:visible="true" />
    <item
        android:id="@+id/share_this_screen"
        android:checkable="false"
        android:onClick="statisticsShare"
        android:orderInCategory="1"
        android:title="@string/title_share_save_this_screen"
        android:visible="true" />

</menu>