<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/eventlog_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/userEvents"
        android:checkable="false"
        android:onClick="viewErrorLog"
        android:orderInCategory="2"
        android:title="@string/view_old_error_log"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/returnHome"
        android:checkable="false"
        android:onClick="returnHome"
        android:orderInCategory="3"
        android:title="@string/return_to_home_screen"
        android:visible="true"
        app:showAsAction="never" />
</menu>