<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/reminder_edit_alt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Reminder alternate title"
            android:inputType="text|textCapWords"
            android:lines="4"
            android:linksClickable="false"
            android:maxLines="5"
            android:minLines="2"
            android:visibility="visible" />

        <EditText
            android:id="@+id/reminder_edit_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_edit_alt_title"
            android:hint="@string/reminder_title"
            android:inputType="text|textCapWords"
            android:lines="4"
            android:linksClickable="false"
            android:maxLines="5"
            android:minLines="2" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_edit_new"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11dp">

            <RadioButton
                android:id="@+id/reminderHourButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:layout_weight="1"
                android:text="@string/hours" />

            <RadioButton
                android:id="@+id/reminderDayButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:layout_weight="1"
                android:checked="false"
                android:text="@string/days" />

            <RadioButton
                android:id="@+id/reminderWeekButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:layout_weight="1"
                android:text="@string/weeks" />

        </RadioGroup>

        <EditText
            android:id="@+id/reminderRepeatDays"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_edit_new"
            android:layout_alignEnd="@+id/reminderUpButton"
            android:layout_marginTop="26dp"

            android:layout_toEndOf="@+id/reminderRepeatcheckBox"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1"
            android:text="5"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/reminderUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_edit_new"
            android:layout_marginEnd="7dp"
            android:layout_toStartOf="@+id/radioGroup"
            android:onClick="reminderUpButton"
            app:srcCompat="@android:drawable/arrow_up_float" />

        <ImageButton
            android:id="@+id/reminderDownButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/reminderUpButton"
            android:layout_alignBottom="@+id/radioGroup"
            android:onClick="reminderDownButton"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <CheckBox
            android:id="@+id/reminderRepeatcheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/reminderDownButton"
            android:layout_marginEnd="13dp"
            android:layout_toStartOf="@+id/reminderDownButton"
            android:checked="true"
            android:text="@string/repeat" />

        <CheckBox
            android:id="@+id/chimeonlycheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminderUpButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:text="@string/chime_only" />

        <CheckBox
            android:id="@+id/alternatingcheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_edit_new"
            android:layout_alignStart="@+id/chimeonlycheckbox"
            android:text="@string/alternating" />

        <ImageButton
            android:id="@+id/reminderSoundButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/reminder_edit_new"
            android:layout_marginRight="5dp"
            android:layout_toStartOf="@+id/reminderRepeatDays"
            android:onClick="chooseReminderSound"
            app:srcCompat="@drawable/ic_music_note_white_24dp" />

        <ImageButton
            android:id="@+id/reminderSwapButton"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            android:paddingLeft="2dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            app:srcCompat="@drawable/ic_swap_vert_white_24dp" />


        <CheckBox
            android:id="@+id/weekDaysCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminderRepeatcheckBox"


            android:checked="true"
            android:text="@string/weekdays" />

        <CheckBox
            android:id="@+id/weekEndsCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminderRepeatcheckBox"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/weekDaysCheckbox"
            android:checked="true"
            android:text="@string/weekends" />

        <CheckBox
            android:id="@+id/highPriorityCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminderRepeatcheckBox"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/weekEndsCheckbox"
            android:checked="false"
            android:text="@string/mega_priority" />
    </RelativeLayout>


</LinearLayout>